# fyyur

./: .gitignore  .pre-commit-config.yaml  app.py  fabfile.py  insert_mock_data.py  package.json  pyproject.toml  requirements.txt  tox.ini
fyyur/: __init__.py  config.py  forms.py  model.py  models.py
fyyur/models/: artist.py  genre.py  reference.py  show.py  venue.py
fyyur/routes/: artist.py  show.py  venue.py
fyyur/schema/: artist.py  base.py  genre.py  show.py  venue.py
fyyur/templates/forms/: edit_artist.html  edit_venue.html  new_artist.html  new_show.html  new_venue.html
fyyur/templates/pages/: home.html  show_artist.html  show_venue.html
migrations/versions/: 28d4390250b8_add_more_columns.py  2d08f838d55a_add_time_column.py  439d329b3c25_remove_nullable.py  543e778a3ec9_add_show_model.py  84bab23c4d10_add_genre_table.py  8cebf7803a84_change_nullable_option.py  936676e9d5ab_add_unique_to_genre_s_name.py  baad36f8899e_initial_migration.py  f6023a252aeb_change_website_to_website_link.py
scripts/: check_db_migration.py
src/: __init__.py  app.py  config.py  model.py
src/routes/: artist.py  venue.py
tests/: conftest.py  mock.py  test_artist.py  test_show.py  test_venue.py  utils.py
