
[project]
name = "Fyyur"
version = "0.0"
authors = []
dependencies = [
    "babel",
    "flask",
    "flask_migrate",
    "flask-moment",
    "flask_sqlalchemy",
    "flask-wtf",
    "phonenumbers",
    "psycopg2",
    "pydantic",
    "python-dateutil",
]

[project.optional-dependencies]
dev = [
    "black",
    "mypy",
    "pytest",
    "ruff",
    "sqlalchemy[mypy]",
    "types-python-dateutil",
]

[tool.ruff]
select = ["E", "F", "I"]
line-length = 90
exclude = ["fabfile.py"]
fixable = ["ALL"]

[tool.black]
line-length = 90

[tool.setuptools]
py-modules = []

[tool.pytest.ini_options]
filterwarnings = ["ignore: 'flask.Markup' is deprecated"]
addopts = "-vvv"

[tool.mypy]
strict = true
ignore_missing_imports = true
allow_untyped_decorators = true
plugins = ["sqlalchemy.ext.mypy.plugin", "pydantic.mypy"]
exclude = [".venv/", "build/", "migrations/", "fabfile.py"]
